--- a/training-course/101-android-basics-in-kotlin/Happy-Birthday-Android-App/app/src/main/res/layout/activity_main.xml
+++ b/training-course/101-android-basics-in-kotlin/Happy-Birthday-Android-App/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,15 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/androidparty" />
 </androidx.constraintlayout.widget.ConstraintLayout>
